--- a/A/CMakeLists.txt
+++ b/A/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 2.8.8)
 
 project(A)
 
-include(CTest)
-#include(${CMAKE_CURRENT_SOURCE_DIR}/../PatchedCTest.cmake)
+#include(CTest)
+include(${CMAKE_CURRENT_SOURCE_DIR}/../PatchedCTest.cmake)
 
 add_library(A A.h A.cxx)
 
