--- a/B/CMakeLists.txt
+++ b/B/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 2.8.8)
 
 project(B)
 
-include(CTest)
-#include(${CMAKE_CURRENT_SOURCE_DIR}/../PatchedCTest.cmake)
+#include(CTest)
+include(${CMAKE_CURRENT_SOURCE_DIR}/../PatchedCTest.cmake)
 
 add_library(B B.h B.cxx)
 
