WithCTestUseLauncherAllLevel-PatchedCTest-TopLevelWarning-TopLevelBuildErrors-InnerErrors

--- a/A/CMakeLists.txt
+++ b/A/CMakeLists.txt
@@ -5,7 +5,9 @@ project(A)
 #include(CTest)
 include(${CMAKE_CURRENT_SOURCE_DIR}/../PatchedCTest.cmake)
 
-add_library(A A.h A.cxx)
+add_library(A1 A1.h A1.cxx)
 
-export(TARGETS A FILE ${A_BINARY_DIR}/ATargets.cmake)
+add_library(A2 A2.h A2.cxx)
+
+export(TARGETS A1 A2 FILE ${A_BINARY_DIR}/ATargets.cmake)
 
